# AnyBlob

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  anyblob.cmake  coverage.sh
.github/actions/do-build/: action.yml
.github/actions/install-deps/: action.yml
.github/workflows/: codeql.yml  integration-tests.yml  unit-tests.yml
data/: aws.csv  azure.csv  gcp.csv  generate.py  scraper.py  sources.txt
example/benchmark/: CMakeLists.txt  README.md
example/benchmark/include/benchmark/: bandwidth.hpp
example/benchmark/include/network/: s3_send_receiver.hpp
example/benchmark/scripts/: create.sh  https.py  https.sh  latency.py  latency.sh  latency_sparse.sh  model.py  model.sh  sizes.py  sizes.sh  sizes_latency.py  sizes_latency.sh  throughput.py  throughput.sh  throughput_sparse.py  throughput_sparse.sh
example/benchmark/scripts/azure/: create.sh  latency.py  latency_sparse.sh  throughput_sparse.py  throughput_sparse.sh
example/benchmark/scripts/gcp/: create.sh  latency.py  latency_sparse.sh  throughput_sparse.py  throughput_sparse.sh
example/benchmark/src/: local.cmake  main.cpp
example/benchmark/src/benchmark/: bandwidth.cpp
example/simple/: CMakeLists.txt  README.md  anyblob.cmake  main.cpp
include/: local.cmake
include/cloud/: aws.hpp  aws_cache.hpp  aws_instances.hpp  aws_resolver.hpp  aws_signer.hpp  azure.hpp  azure_instances.hpp  azure_signer.hpp  blob.hpp  gcp.hpp  gcp_instances.hpp  gcp_signer.hpp  http.hpp  ibm.hpp  ibm_instances.hpp  minio.hpp  oracle.hpp  oracle_instances.hpp  provider.hpp
include/network/: cache.hpp  config.hpp  connection_manager.hpp  delete_transaction.hpp  get_transaction.hpp  http_helper.hpp  http_message.hpp  http_request.hpp  http_response.hpp  https_message.hpp  io_uring_socket.hpp  message_result.hpp  message_task.hpp  messages.hpp  original_message.hpp  poll_socket.hpp  put_transaction.hpp  resolver.hpp  socket.hpp  tasked_send_receiver.hpp  throughput_cache.hpp  throughput_resolver.hpp  tls_connection.hpp  tls_context.hpp  transaction.hpp
include/utils/: data_vector.hpp  load_tracker.hpp  ring_buffer.hpp  timer.hpp  unordered_map.hpp  utils.hpp
src/: local.cmake
src/cloud/: aws.cpp  aws_cache.cpp  aws_instances.cpp  aws_resolver.cpp  aws_signer.cpp  azure.cpp  azure_instances.cpp  azure_signer.cpp  blob.cpp  gcp.cpp  gcp_instances.cpp  gcp_signer.cpp  http.cpp  ibm.cpp  ibm_instances.cpp  minio.cpp  oracle.cpp  oracle_instances.cpp  provider.cpp
src/network/: cache.cpp  connection_manager.cpp  http_helper.cpp  http_message.cpp  http_request.cpp  http_response.cpp  https_message.cpp  io_uring_socket.cpp  message_result.cpp  message_task.cpp  messages.cpp  poll_socket.cpp  resolver.cpp  tasked_send_receiver.cpp  throughput_cache.cpp  throughput_resolver.cpp  tls_connection.cpp  tls_context.cpp  transaction.cpp
src/utils/: timer.cpp  utils.cpp
test/: local.cmake
test/cloud/: aws_test.cpp  azure_test.cpp  gcp_test.cpp  provider_test.cpp
test/integration/: local.cmake  minio.cpp  minio_async.cpp  minio_sync.cpp  test.cpp
test/network/: http_helper_test.cpp  io_uring_socket_test.cpp  messages_test.cpp  resolver_test.cpp  send_receiver_test.cpp  tasked_send_receiver_test.cpp
test/unit/: local.cmake  test.cpp
test/unit/cloud/: aws_test.cpp  azure_test.cpp  gcp_test.cpp  provider_test.cpp
test/unit/network/: http_helper_test.cpp  http_request_test.cpp  io_uring_socket_test.cpp  messages_test.cpp  resolver_test.cpp  send_receiver_test.cpp  socket_test.cpp  tasked_send_receiver_test.cpp
test/unit/utils/: data_vector_test.cpp  ring_buffer_test.cpp  unordered_map_test.cpp  utils_test.cpp
test/utils/: data_vector_test.cpp  ring_buffer_test.cpp  unordered_map_test.cpp
